--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,6 @@
     <div id="app">
       <div class="loader"></div>
     </div>
-    <script src="./bundle.js"></script>
+    <script src="./build/bundle.js"></script>
   </body>
 </html>
